# executor

./: .gitignore  .travis.yml  ChangeLog.md  Executor.hs  Makefile  README.md  executor.cabal  test.hs
src/: Executor.hs  helpers.hs
test/: Spec.hs  doctests.hs
