name:                executor
version:             0.0.1
synopsis:            Shell helpers
homepage:            https://github.com/GianlucaGuarini/executor
license:             MIT
license-file:        LICENSE
author:              Gianluca Guarini
maintainer:          gianluca.guarini@gmail.com
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

cabal-version:       >=1.10

Test-Suite test-executor
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  build-depends:     base >=4.9 && <4.10, process >=1.4 && <1.5, async >=2.1 && <2.2

library
  exposed-modules:     Executor
  build-depends:       base >=4.9 && <4.10, process >=1.4 && <1.5, async >=2.1 && <2.2
  hs-source-dirs:      ./
  default-language:    Haskell2010

