name:                executor
version:0.0.3
description:         Haskell module to execute single or multiple shell commands
synopsis:            Shell helpers
homepage:            https://github.com/GianlucaGuarini/executor
license:             MIT
license-file:        LICENSE
author:              Gianluca Guarini
maintainer:          gianluca.guarini@gmail.com
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/GianlucaGuarini/executor

Test-Suite test-executor
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           test/Spec.hs
  hs-source-dirs:    ., test, src
  other-modules:     Executor, Helpers
  build-depends:     base >=4.9 && <4.10, process >=1.4 && <1.5, async >=2.1 && <2.2, hspec >= 2.2

Test-Suite doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           test/doctests.hs
  hs-source-dirs:    ., test, src
  other-modules:     Executor, Helpers
  build-depends:     base, doctest >= 0.9.3

library
  exposed-modules:   Executor
  default-language:  Haskell2010
  build-depends:     base >=4.9 && <4.10, process >=1.4 && <1.5, async >=2.1 && <2.2
  hs-source-dirs:    src
